2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/kernel.h (FOR_MODULES): Adjust to preserve alignment
	invariants.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/font/font.c (blit_comb: do_blit): Make static instead of
	nested.
	(blit_comb: add_device_width): Likewise.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from USB iterators.

	* include/grub/usb.h (grub_usb_iterate_hook_t): New type.
	(grub_usb_controller_iterate_hook_t): Likewise.
	(grub_usb_iterate): Add hook_data argument.
	(grub_usb_controller_iterate): Likewise.
	(struct grub_usb_controller_dev.iterate): Likewise.

	Update all implementations and callers.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c (print_ucs4_terminal): Don't output right
	margin when not needed.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Make color variables global instead of it being per-terminal.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/ls.c (grub_ls_print_devices): Add missing
	asterisk.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	Fix powerpc and sparc64 build failures caused by un-nesting memory
	map iterators.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/disk/arc/arcdisk.c (grub_arcdisk_iterate): Fix
	parameter declarations.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/lsmmap.c: Fix unused variable on emu.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve spkmomdem reliability by adding a separator between bytes.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/partmap/msdos.c (embed_signatures): Add the signature of
	an Acer registration utility with several sightings in the wild.
	Reported by: Rickard Westman.  Fixes Ubuntu bug #987022.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from filesystem directory iterators.
